<resources>
    <string name="app_name">Buddies</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="buddies">Buddies</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="preferences">buddiesPreferences</string>
    <string name="status_enroll">statusEnroll</string>
    <string name="facebook_app_id">376288125909497</string>
    <string name="username">Usuario</string>
    <string name="passwd">Contraseña</string>
    <string name="login">Entrar</string>
    <string name="forgotPass">Olvide mi contraseña</string>
    <string name="title_activity_drawer">DrawerActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="howWeCantHelpYou">¿Comó podemos ayudarte hoy?</string>
    <string name="tutors">Tutores</string>
    <string name="nanis">Niñeras</string>
    <string name="icon_graduated"></string>
    <string name="number">Numero de 10 digitos</string>
    <string name="validatephonestring">Ingresa tu numero telefonico para validar tu cuenta</string>
    <string name="validate">VALIDAR</string>
    <string name="wait_dialog">Espere un momento...</string>
    <string name="title_activity_profile_detail">ProfileDetailActivity</string>
</resources>
